Add SortMeRNA rule
Add the SortMeRNA rule for quantifying ribosomal RNA contaminations in
the raw reads, which will be included in the MultiQC report at the end
of the pipeline.

--- a/pipelines/RNA-seq/Snakefile
+++ b/pipelines/RNA-seq/Snakefile
@@ -6,6 +6,7 @@ configfile: "config.yml"
 # Paths
 datadir = config["datadir"]
 fastqcdir = config["fastqcdir"]
+sortmernadir = config["sortmernadir"]
 aligndir = config["aligndir"]
 rseqcdir = config["rseqcdir"]
 countdir = config["countdir"]
@@ -24,10 +25,11 @@ samples = list(set(samples))
 
 # Include external rules
 include: "rules/FastQC.smk"
-include: "rules/STAR-PE.smk"
-include: "rules/RSeqC.smk"
 include: "rules/featureCounts.smk"
 include: "rules/MultiQC.smk"
+include: "rules/RSeqC.smk"
+include: "rules/SortMeRNA.smk"
+include: "rules/STAR-PE.smk"
 
 # Rule: final output and cleanup
 rule all:
