--- a/pipelines/RNA-seq/config.yml
+++ b/pipelines/RNA-seq/config.yml
@@ -3,6 +3,7 @@ datadir: "data/test-data/fastq/"
 
 # Software paths
 fastqcdir: "results/fastqc/"
+sortmernadir: "results/sortmerna/"
 aligndir: "results/star/"
 rseqcdir: "results/rseqc/"
 countdir: "results/counts/"
