--- a/pipelines/RNA-seq/config.yml
+++ b/pipelines/RNA-seq/config.yml
@@ -3,9 +3,9 @@ datadir: "data/test-data/fastq/"
 resultsdir: "results/"
 
 # Indexes and reference files
+ASSEMBLY: "Homo_sapiens.GRCh38.97"
 STAR_REF: "data/idx/STARIndex/"
 REF_GENE: "data/idx/genes.bed"
-REF_GTF: "data/idx/genes.gtf"
 
 # Software parameters
 STAR_THREADS: 2
